@@ -5,6 +5,7 @@ Distributed under the GPL v3
 xx xxx 2017, Version 2.22
 
 - Extract all episodes on an Areena series page, not just the latest ones
+- Partially fixed the --showepisodepage output on Elävä Arkisto
 
 31 Jul 2017, Version 2.21
 
